# gazebo_drone_tutorials

./: .gitignore  .pub_vel_test.py.swp  .start_test_uav1_with_downward_cam.sh.swp  ReadMe.md  imu_processing.py  judge_uav_solve_maze.py  pub_target_circle.py  pub_target_line_x.py  pub_target_line_y.py  pub_target_line_z.py  pub_target_test.py  pub_target_test_apriltag.py  pub_two_drone.py  start_maze_ctrl.sh  start_maze_hard_ctrl.sh  start_maze_hard_hector_with_car.sh  start_maze_use_car.sh  start_maze_use_hector.sh  start_test_uav1.sh  start_test_uav1_five.sh  start_test_uav1_with_downward_cam.sh  sub_apriltag_result_node.py  test_car1_close_loop_control.py  test_close_loop.py
catkin_ws/: battle.sh  kill.sh  python_kill.sh  reset.sh  start_test_uav1.sh
catkin_ws/scripts/: initial_pose  uav_arm.sh  (+4 more)
catkin_ws/src/bullet_control/: CMakeLists.txt  cmd  package.xml
catkin_ws/src/bullet_control/launch/: load_bullet.launch
catkin_ws/src/bullet_control/sdf/my_bullet_control/: model.config  model.sdf
catkin_ws/src/bullet_control/src/: bullet_plugin.cc  vel.cc
catkin_ws/src/bullet_control/urdf/: model.urdf
catkin_ws/src/bullet_control/world/: bullet.world
catkin_ws/src/innok_heros_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
catkin_ws/src/innok_heros_description/launch/: innok_heros.rviz  innok_heros_rviz.launch
catkin_ws/src/innok_heros_description/meshes/: base_link.STL  battery_box.STL  caster_top.STL  drive_box.STL  mounting_plate_3w.STL  mounting_plate_4w.STL  swing_axle_bot.STL  swing_axle_top.STL  wheel.STL  wheel_tractor.STL  wheel_tractor_large.STL
catkin_ws/src/innok_heros_description/urdf/: innok_heros_3w.xacro  innok_heros_3wtractor.xacro  innok_heros_4w.xacro  innok_heros_4wtractor.xacro  swing_axle_urdf_package.urdf
catkin_ws/src/innok_heros_description/urdf/ROS/: heros_diff_drive.xacro  heros_joint_pub.xacro  heros_skid_drive.xacro
catkin_ws/src/innok_heros_description/urdf/blue/: innok_heros_4wtractor_blue.xacro  innok_heros_4wtractor_with_cam_blue.xacro
catkin_ws/src/innok_heros_description/urdf/modules/: heros_base_link.xacro  heros_battery.xacro  heros_caster.xacro  heros_drive.xacro  heros_mounting_plate.xacro  heros_mounting_plate_blue.xacro  heros_mounting_plate_red.xacro  heros_swing_axle.xacro  heros_wheel.xacro  heros_wheel_tractor_large.xacro  heros_wheel_tractor_red.xacro
catkin_ws/src/innok_heros_description/urdf/red/: innok_heros_4wtractor_red.xacro  innok_heros_4wtractor_with_cam_red.xacro
catkin_ws/src/innok_heros_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
catkin_ws/src/innok_heros_gazebo/building_editor_models/lmx2Y2B/: 19052514A_Map1  19052618A_Map2  19052618A_Map2_testtexture
catkin_ws/src/innok_heros_gazebo/building_editor_models/lmx2Y2B/19052514CenterCylin/: model.config  model.sdf
catkin_ws/src/innok_heros_gazebo/building_editor_models/lmx2Y2B/19052514EdgeWall/: model.config  model.sdf
catkin_ws/src/innok_heros_gazebo/building_editor_models/lmx2Y2B/19052514EdgeWall_2m/: model.config  model.sdf
catkin_ws/src/innok_heros_gazebo/launch/: cars_A_test_2.launch  cars_B_test_2.launch  load_cars10_uavs20.launch  load_cars4_uavs6.launch  load_cars6_uavs6.launch  load_hard_world.launch  load_maze_world.launch  load_uav_B5_A8.launch  load_world_1.launch  load_world_2.launch  load_world_3.launch  load_world_60x40.launch  load_world_Apriltag_5x5.launch  load_world_apriltag_map.launch  spawn_innok_vehicle.launch  uavs_A8.launch  uavs_B5.launch
catkin_ws/src/innok_heros_gazebo/launch/A/: cars_A2.launch  cars_A3.launch  cars_A5.launch  uavs_A1.launch  uavs_A10.launch  uavs_A3.launch
catkin_ws/src/innok_heros_gazebo/launch/B/: cars_B2.launch  cars_B3.launch  cars_B5.launch  uavs_B10.launch  uavs_B3.launch
catkin_ws/src/innok_heros_gazebo/worlds/: 19052618A_Map2  19052618A_Map2.bak  1908082Y2B_simplesituation_color.world  1908082Y2B_simplesituation_color2.world  1908082Y2B_simplesituation_color3.world  1908082Y2B_simplesituation_color4.world  Apriltag_5x5.world  GroundControlStation_A_B.world  center_x7_y9_z7.5_60x40.world  fountain_60x40.world  map1.world  maze_easy.world  maze_hard.world  maze_hard_ok.world  maze_hard_white_bg.world
catkin_ws/src/innok_heros_gazebo/worlds/Apriltag_plane/: model.config  model.sdf
catkin_ws/src/innok_heros_gazebo/worlds/Apriltag_plane/materials/scripts/: Apriltag.material
catkin_ws/src/innok_heros_gazebo/worlds/Apriltags_world/: README.md  apriltags_map.world
catkin_ws/src/innok_heros_gazebo/worlds/Apriltags_world/models/: add_path.sh  apriltagMapInfo_5x5_4.9000m.txt  apriltagMapInfo_7x7_6.7000m.txt  apriltagMapInfo_9x9_8.5000m.txt
catkin_ws/src/innok_heros_gazebo/worlds/Apriltags_world/models/Apriltags_plane/: model.config  model.sdf
catkin_ws/src/innok_heros_gazebo/worlds/Apriltags_world/models/Apriltags_plane/materials/scripts/: Apriltag.material
catkin_ws/src/judge_system/: CMakeLists.txt  package.xml
catkin_ws/src/judge_system/include/: authorized_check.h  judge_gui.h  judge_interface.h
catkin_ws/src/judge_system/launch/: judge_system_Buav5_Auav8.launch  judge_system_car4_uav6.launch  judge_system_car6_uav6.launch
catkin_ws/src/judge_system/src/: authorized_check.cc  judge_gui.cpp  judge_interface.cpp  main.cpp  main_gui.cpp
catkin_ws/src/judge_system_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/judge_system_msgs/msg/: Alive_model.msg  Alive_models.msg  Attack_cmd.msg  Bullet_launch.msg  Move_cmd.msg
catkin_ws/src/judge_system_msgs/srv/: clear_bullets.srv
catkin_ws/src/sim_platform_pysdk/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/sim_platform_pysdk/launch/: start_2AI.launch  start_computer_and_your_code.launch
catkin_ws/src/sim_platform_pysdk/src/common/: __init__.py  obstacles.py
catkin_ws/src/sim_platform_pysdk/src/computer/: computer.py
catkin_ws/src/sim_platform_pysdk/src/player/: example.py  plan_points.py  player.py  test1move.py  test3moves.py  test_move_attack.py  testattack.py
docs/: maze_easy.vsdx
maze_map_data/: get_index_from_pos.m  get_pos_from_map_index.m  maze_map.mat  test.m
(+112 files in other folders)
