<?xml version="1.0"?>
<package>
  <name>innok_heros_description</name>
  <version>1.0.3</version>
  <description>Innok Heros URDF description and RVIZ launch file</description>

  <maintainer email="sh@innok-robotics.de">Sabrina Heerklotz</maintainer>
  <author email="jh@innok-robotics.de">Jonathan Hechtbauer</author>

  <url type="website">http://wiki.ros.org/Robots/Innok-Heros</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
